Dibuat menggunakan Colaboratory

--- a/PROJEK_PCVK.ipynb
+++ b/PROJEK_PCVK.ipynb
@@ -6,7 +6,6 @@
       "name": "PROJEK PCVK.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEZPcZV7bzL7ZQvWCAWJ26",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,10 +391,127 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from google.colab import drive \n",
+        "\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "ldVVziSAmYcV"
+        "id": "91T0mDAJGJjc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "from matplotlib import pyplot as plt\n",
+        "import numpy as np\n",
+        "# where you stored image\n",
+        "image_origin = cv2.imread(\"/content/drive/MyDrive/Polinema/PCVK/Images/project/001.png\")\n",
+        "image_origin = cv2.cvtColor(image_origin,cv2.COLOR_BGR2RGB)\n",
+        "image_contorus = image_origin.copy()\n",
+        "\n",
+        "plt.imshow(image_contorus)"
+      ],
+      "metadata": {
+        "id": "Jc_RqUoaGKVZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert to binary\n",
+        "ret,thresh = cv2.threshold(image_origin,100,255,cv2.THRESH_BINARY)\n",
+        "cv2.imwrite(\"image_biner.png\",thresh)\n",
+        "plt.imshow(thresh)"
+      ],
+      "metadata": {
+        "id": "kLc9DMN2GRC-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# image_erosi\n",
+        "erosion = cv2.erode(thresh,(5,5),iterations = 1)\n",
+        "cv2.imwrite(\"image_erosion.png\",erosion)\n",
+        "plt.imshow(erosion)"
+      ],
+      "metadata": {
+        "id": "kt4fd3RRGVtv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  imgray = cv2.cvtColor(erosion, cv2.COLOR_BGR2GRAY)\n",
+        "  plt.title('GRAY')\n",
+        "  plt.imshow(imgray)\n",
+        "  plt.show()"
+      ],
+      "metadata": {
+        "id": "HwFRzBz8GZTi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# edge detection\n",
+        "image_edge = cv2.Canny(imgray,50,100)\n",
+        "image_edge = cv2.dilate(image_edge, None, iterations=1)\n",
+        "image_edge = cv2.erode(image_edge, None, iterations=1)\n",
+        "plt.figure(figsize = (20,12))\n",
+        "plt.imshow(image_edge)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Xf7_NLQdGaQw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image_contorus = image_origin.copy()\n",
+        "count = 0\n",
+        "\n",
+        "# contours\n",
+        "contour,hier = cv2.findContours(image_edge.copy(), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+        "for c in contour:\n",
+        "  if cv2.contourArea(c) < 100:\n",
+        "    count = count + 1\n",
+        "    continue\n",
+        "  hull = cv2.convexHull(c)\n",
+        "  cv2.drawContours(image_contorus,[hull],0,(0,0,255),3)\n",
+        "  \n",
+        "print(\"Jumlah Koloni :\"+ str((count)))\n",
+        "cv2.imwrite(\"image_result.png\",image_contorus)\n",
+        "plt.imshow(image_contorus)"
+      ],
+      "metadata": {
+        "id": "oYEUEjIiGeWE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize = (20,12))\n",
+        "plt.imshow(image_contorus)"
+      ],
+      "metadata": {
+        "id": "mVmZ7mloGiJJ"
       },
       "execution_count": null,
       "outputs": []
